--- a/pages/community.html
+++ b/pages/community.html
@@ -7,73 +7,11 @@
     <link href="../layout/styles/community.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body id="top">
+<body>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="7BlG7ylO"></script>
-    <div class="wrapper row0">
-        <div id="topbar" class="hoc clear">
-          <div class="fl_left">
-            <ul>
-              <li><i class="fa fa-instagram"></i> @ansan_mathew</li>
-              <li><i class="fa fa-envelope-o"></i>answebdeveloper@gmail.com</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="wrapper row2">
-        <nav id="mainav" class="hoc clear"> 
-          <ul class="clear">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="gallery.html">Gallary</a></li>
-            <li id="works"><a href="works.html">Works</a></li>
-            <li><a href="https://www.upwork.com/freelancers/~01f31e59f28f19e073">hire me on upwork</a></li>
-            <li class="active"><a href="community.html">Our community</a></li>
-          </ul>
-        </nav>
 
-        <div class="mbody col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="background-image:url(../images/backgrounds/comback.jpg)">
-          <br>
-          <br>
-          <br>
-          <br>
-          <div class="impnotice" style="background-color: rgb(246, 239, 232)">
-            <img class=imp src="../images/backgrounds/imp.png">
-            <h3 class="imphead">you must agree to the following condition's inorder to become a part of our community</h3>
-
-            <ol type="1" class="list">
-              <li>Don't use harmful words that hurts or relegate users in our community</li>
-              <li>Respect each other</li>
-              <li>Don't use any links or images to promote anyone or anything</li>
-              <li>Don't ask anyone to manipulate someones account/system/services</li>
-              <li>Dont share any valuable credentials</li>
-              <li>feel free to report those who violates privacy policy of <a href ="https://www.facebook.com/about/privacy/">facebook</a></li>
-
-            </ol>
-          </div>
-            <div>
-              <br>
-              <br>
-              <br>
-              <div class=fbplugin>
                 <div class="fb-comments" data-href="https://ansanmathew.github.io/4nowm3/pages/community.html" data-numposts="10" data-width="100%"></div>
-              </div>
-            </div>
-            <br>
-            <br>
-          <div class ="foot"></div>
-        </div>
-      </div>
-        
-        <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-        
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-        <script src="../layout/scripts/jquery.min.js"></script>
-        <script src="../layout/scripts/jquery.backtotop.js"></script>
-        <script src="../layout/scripts/jquery.mobilemenu.js"></script>
-        <script src="../layout/scripts/jquery.flexslider-min.js"></script>
       </body>
       </html>
