--- a/pages/community.html
+++ b/pages/community.html
@@ -9,7 +9,7 @@
 </head>
 <body id="top">
   <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="F4B1HsDr"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="7BlG7ylO"></script>
     <div class="wrapper row0">
         <div id="topbar" class="hoc clear">
           <div class="fl_left">
@@ -33,13 +33,6 @@
             <li class="active"><a href="community.html">Our community</a></li>
           </ul>
         </nav>
-        <script>
-          $(document).ready(function(){
-            $("#works").click(function(){
-              alert("copyright:- any tool (if any) provided from this website is not allowed to resell without my permission...click OK to continue")
-            })
-          })
-        </script>
 
         <div class="mbody col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="background-image:url(../images/backgrounds/comback.jpg)">
           <br>
@@ -55,6 +48,7 @@
               <li>Respect each other</li>
               <li>Don't use any links or images to promote anyone or anything</li>
               <li>Don't ask anyone to manipulate someones account/system/services</li>
+              <li>Dont share any valuable credentials</li>
               <li>feel free to report those who violates privacy policy of <a href ="https://www.facebook.com/about/privacy/">facebook</a></li>
 
             </ol>
@@ -64,7 +58,7 @@
               <br>
               <br>
               <div class=fbplugin>
-                <div class="fb-comments" data-href="http://127.0.0.1:5500/pages/community.html" data-numposts="1" data-skin="light" data-width="100%"></div>
+                <div class="fb-comments" data-href="https://ansanmathew.github.io/4nowm3/pages/community.html" data-numposts="10" data-width="100%"></div>
               </div>
             </div>
             <br>
