--- a/pages/community.html
+++ b/pages/community.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body id="top">
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="7BlG7ylO"></script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="45tMLVy5"></script>
     <div class="wrapper row0">
         <div id="topbar" class="hoc clear">
           <div class="fl_left">
@@ -56,7 +56,7 @@
               <br>
               <br>
               <div class=fbplugin>
-                <div class="fb-comments" data-href="https://ansanmathew.github.io/4nowm3/pages/community.html" data-numposts="10" data-width="100%"></div>
+                <div class="fb-comments" data-href="https://penguinneck.github.io/ansan_mathew/pages/community.html" data-numposts="10" data-width="100%"></div>
               </div>
             </div>
             <br>
