--- a/pages/community.html
+++ b/pages/community.html
@@ -47,7 +47,7 @@
               <li>Don't use any links or images to promote anyone or anything</li>
               <li>Don't ask anyone to manipulate someones account/system/services</li>
               <li>Dont share any valuable credentials</li>
-              <li>feel free to report those who violates privacy policy of <a href ="https://www.facebook.com/about/privacy/">facebook</a></li>
+              <li>feel free to report those who violates privacy policy of facebook</a></li>
 
             </ol>
           </div>
