--- a/pages/community.html
+++ b/pages/community.html
@@ -36,6 +36,7 @@
           <br>
           <br>
           <br>
+            <p class="notice">sorry for the inconvenience / the comment section will be available soon!!!</p>
           <br>
           <div class="impnotice" style="background-color: rgb(246, 239, 232)">
             <img class=imp src="../images/backgrounds/imp.png">
