--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <article>
           <h6 class="heading font-x3" id="importance">importance of programming languages</h6>
           <p>We are now living in a cyber world, We cant even imagine a world without internet. Our interation with them changed us a lot, do you know how those things works? every programmers contribution and hardwork helped to build this online world .To happen all those things we must interact with the computer or (system) and for interacting we use programming languages</p>
-          <footer><a class="btn" id="works2" href="../per_website/pages/works.html">Show Works</a></footer>
+          <footer><a class="btn" id="works2" href="pages/works.html">Show Works</a></footer>
         </article>
       </li>
       <li class="one_third">
