--- a/pages/community.html
+++ b/pages/community.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body id="top">
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="45tMLVy5"></script>
     <div class="wrapper row0">
         <div id="topbar" class="hoc clear">
           <div class="fl_left">
@@ -55,8 +54,30 @@
               <br>
               <br>
               <br>
-              <div class=fbplugin>
-                <div class="fb-comments" data-href="https://github.com/penguinneck/ansan_mathew/pages/community.html" data-numposts="100" data-width="100%"></div>
+              <div class=plugin>
+                <div id="graphcomment"></div>
+                <script type="text/javascript">
+
+                  /* - - - CONFIGURATION VARIABLES - - - */
+
+                  // make sure the id is yours
+                  window.gc_params = {
+                    graphcomment_id: 'penguinlips-ansan_mathew',
+
+                    // if your website has a fixed header, indicate it's height in pixels
+                    fixed_header_height: 0,
+                  };
+
+                  /* - - - DON'T EDIT BELOW THIS LINE - - - */
+
+
+                  (function() {
+                    var gc = document.createElement('script'); gc.type = 'text/javascript'; gc.async = true;
+                    gc.src = 'https://graphcomment.com/js/integration.js?' + Math.round(Math.random() * 1e8);
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(gc);
+                  })();
+
+                </script>
               </div>
             </div>
             <br>
