--- a/pages/community.html
+++ b/pages/community.html
@@ -46,7 +46,10 @@
               <li>Don't use any links or images to promote anyone or anything</li>
               <li>Don't ask anyone to manipulate someones account/system/services</li>
               <li>Dont share any valuable credentials</li>
-              <li>feel free to report those who violates privacy policy of <a href ="https://www.facebook.com/about/privacy/">facebook</a></li>
+              <li>Dont share any valuable credentials because the database (comments only) are stored in 3rd party server</li>
+              <li>Use unknown mail id if you want to comment anonymously</li>
+              <li>If you found any issues or bugs in this website feel free to contact me {<a href = "">instagram</a>
+                
 
             </ol>
           </div>
