--- a/pages/community.html
+++ b/pages/community.html
@@ -34,7 +34,7 @@
           <br>
           <br>
           <br>
-            <p class="notice">sorry for the inconvenience / the comment section will be available soon!!!</p>
+            <p>here vid</p>
           <br>
           <div class="impnotice" style="background-color: rgb(246, 239, 232)">
             <img class=imp src="../images/backgrounds/imp.png">
@@ -48,7 +48,7 @@
               <li>Dont share any valuable credentials</li>
               <li>Dont share any valuable credentials because the database (comments only) are stored in 3rd party server</li>
               <li>Use unknown mail id if you want to comment anonymously</li>
-              <li>If you found any issues or bugs in this website feel free to contact me {<a href = "https://instagram.com/ansan_mathew?igshid=14v610wa8yrb1">instagram</a>
+              <li>If you found any issues or bugs in this website feel free to contact me {<a href = "https://instagram.com/ansan_mathew?igshid=14v610wa8yrb1">instagram}</a>
                 
 
             </ol>
