--- a/pages/community.html
+++ b/pages/community.html
@@ -67,7 +67,7 @@
                     graphcomment_id: 'penguinlips-ansan_mathew',
 
                     // if your website has a fixed header, indicate it's height in pixels
-                    fixed_header_height: 0,
+                    fixed_header_height: 100%,
                   };
 
                   /* - - - DON'T EDIT BELOW THIS LINE - - - */
