--- a/pages/community.html
+++ b/pages/community.html
@@ -57,17 +57,17 @@
               <br>
               <br>
               <div class=plugin>
-                <div id="graphcomment"></div>
+                  <div id="graphcomment"></div>
                 <script type="text/javascript">
 
                   /* - - - CONFIGURATION VARIABLES - - - */
 
                   // make sure the id is yours
                   window.gc_params = {
-                    graphcomment_id: 'penguinlips-ansan_mathew',
+                    graphcomment_id: 'https-penguinlips-github-io-ansan_mathew',
 
                     // if your website has a fixed header, indicate it's height in pixels
-                    fixed_header_height: 100%,
+                    fixed_header_height: 0,
                   };
 
                   /* - - - DON'T EDIT BELOW THIS LINE - - - */
