--- a/pages/community.html
+++ b/pages/community.html
@@ -6,6 +6,7 @@
     <title>AnsanMathew.web</title>
     <link href="../layout/styles/community.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700|Playfair+Display:400i" rel="stylesheet">
 </head>
 <body id="top">
     <div class="wrapper row0">
@@ -34,6 +35,9 @@
           <br>
           <br>
           <br>
+            <p class="notice">Comment's will load in&nbsp;
+               <video class="count" autoplay><source src="../videos/count.mp4"></video>&nbsp; second(s) please wait !
+            </p>
           <br>
           <div class="impnotice" style="background-color: rgb(246, 239, 232)">
             <img class=imp src="../images/backgrounds/imp.png">
