--- a/pages/community.html
+++ b/pages/community.html
@@ -48,10 +48,9 @@
               <li>Respect each other</li>
               <li>Don't use any links or images to promote anyone or anything</li>
               <li>Don't ask anyone to manipulate someones account/system/services</li>
-              <li>Dont share any valuable credentials</li>
-              <li>Dont share any valuable credentials because the database (comments only) are stored in 3rd party server</li>
-              <li>Use unknown mail id if you want to comment anonymously</li>
-              <li>If you found any issues or bugs in this website feel free to contact me {<a href = "https://instagram.com/ansan_mathew?igshid=14v610wa8yrb1">instagram</a>}</li>
+              <li>Dont share any valuable credentials because the database are stored in 3rd party server</li>
+              <li>Use "anything@abc" as email if you want to comment anonymously</li>
+              <li>If you found any issues or bugs in this website feel free to contact me {<a href = "https://instagram.com/ansan_mathew?igshid=14v610wa8yrb1">instagram</a>} i will try to fix it asap</li>
                 
 
             </ol>
