--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
           <div class="fl_left">
             <ul>
               <li><i class="fa fa-instagram"></i> @ansan_mathew</li>
-              <li><i class="fa fa-envelope-o"></i>answebdeveloper@gmail.com</li>
+              <li><i class="fa fa-envelope-o"></i>ansanmathewpoly@gmail.com</li>
             </ul>
           </div>
         </div>
