--- a/pages/works.html
+++ b/pages/works.html
@@ -78,7 +78,7 @@
             <h1 id=certificatesborder class="mainhead">certificates</h1>
           <br>
           <br>
-          <img class=certificate src="../images/certificates/Coursera-Python Certificate.jpg">
+          <img class=certificate src="../images/certificates/pcap.jpg">
           <br>
           <br>
         </div>
